<resources>
    <string name="app_name">Notes</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_notes">Notes</string>
    <string name="menu_reminders">Reminders</string>
    <string name="menu_about">About</string>
    <string name="menu_app_name">Notes</string>
    <string name="menu_settings">Settings</string>
    <string name="search_hint">Search...</string>
    <string name="search_title">Search</string>
    <string name="add_title">Title</string>
    <string name="pick_time">pick_time</string>
    <string name="notes_note_hint">Note</string>
    <string name="notes_title_hint">Title</string>
    <string name="notes_navigation_photo">Take a photo</string>
    <string name="notes_navigation_video">Take a video</string>
    <string name="notes_navigation_Tvideo">Take a video</string>
    <string name="notes_navigation_Aphoto">Add a photo</string>
    <string name="notes_navigation_Avideo">Add a video</string>
    <string name="menu_bottom_notes_reminders">Add a reminder</string>
    <string name="menu_bottom_notes_delete">Delete note</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dialog_custom_text_details">Reminders</string>
    <string name="dialog_custom_button_date">Finish date</string>
    <string name="close">Close</string>
    <string name="dialog_custom_button_time">Finish time</string>
    <string name="accept">Accept</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="record_audio">Record</string>
    <string name="play">Play</string>
    <string name="save">Save</string>
    <string name="stop_recording">Stop recording</string>
    <string name="stop">Stop</string>
    <string name="notes_navigation_record">Record</string>
</resources>