<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <group
            android:id="@+id/menu_top"
            android:checkableBehavior="single">
            <item
                android:id="@+id/nav_home"
                android:icon="@drawable/ic_baseline_sticky_note_2_24"
                android:title="@string/menu_notes" />
            <item
                android:id="@+id/nav_gallery"
                android:icon="@drawable/ic_baseline_add_alert_24"
                android:title="@string/menu_reminders" />
        </group>
        <group
            android:id="@+id/menu_bottom"
            android:checkableBehavior="single">
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_baseline_settings_24"
                android:title="@string/menu_settings" />
            <item
                android:id="@+id/nav_slideshow"
                android:icon="@drawable/ic_baseline_info_24"
                android:title="@string/menu_about" />
        </group>

    </group>
</menu>