<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/txtHeader"
        style="@style/Widget.AppCompat.Light.ActionBar"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:text="@string/dialog_custom_text_details"
        android:textColor="@color/WhiteColor"
        android:textSize="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/dialog_button_get_finishdate"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:onClick="showDatePickerDialog"
        android:text="@string/dialog_custom_button_date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtHeader" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/dialog_button_get_finishtime"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:onClick="showTimePickerDialog"
        android:text="@string/dialog_custom_button_time"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dialog_button_get_finishdate" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnAcceptDialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="8dp"
        android:text="@string/accept"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dialog_button_get_finishtime" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnCancelDialog"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/cancel"
        app:layout_constraintEnd_toStartOf="@+id/btnAcceptDialog"
        app:layout_constraintRight_toRightOf="@+id/btnAcceptDialog"
        app:layout_constraintTop_toBottomOf="@id/dialog_button_get_finishtime" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnDeleteDialog"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/delete"
        android:visibility="invisible"
        app:layout_constraintEnd_toStartOf="@+id/btnCancelDialog"
        app:layout_constraintRight_toRightOf="@+id/btnAcceptDialog"
        app:layout_constraintTop_toBottomOf="@id/dialog_button_get_finishtime" />
</androidx.constraintlayout.widget.ConstraintLayout>